# Enterprise-FastAPI-Boilerplate

./: .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260704_initial_schema.py  20260707_add_missing_user_columns.py
backend/: __init__.py  main.py
backend/app/: factory.py  infrastructure.py  lifespan.py  (+1 more)
docs/: DOCUMENTATION.md  GUIDELINES.MD
scripts/: security_scan.sh
tests/: conftest.py  test_api_contracts.py  test_api_keys.py  test_app_bootstrap.py  test_audit_log_api.py  test_auth_and_admin.py  test_authentication.py  test_authorization_and_roles.py  test_background_and_config.py  test_background_jobs_and_resilience.py  test_billing_hardening.py  test_bootstrap_and_infrastructure.py  test_config.py  test_crud_and_socketio.py  test_email_delivery.py  test_enterprise_architecture_layers.py  test_enterprise_core.py  test_enterprise_hardening.py  test_enterprise_layout.py  test_enterprise_policy.py  test_enterprise_security.py  test_enterprise_structure.py  test_health_and_runtime.py  test_lifespan_bootstrap.py  test_migrations_match_models.py  test_outbound_webhooks.py  test_password_reset_and_email_verification.py  test_payment_adapters.py  test_platform_runtime_and_contracts.py  test_products_api.py  test_rbac_and_subscription_regression.py  test_realtime.py  test_refresh_and_health.py  test_resilience_and_tracing.py  test_seed_data.py  test_uploads.py  test_users_api.py
(+136 files in other folders)
