[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tier4-fastapi-boilerplate"
version = "0.1.0"
description = "Production-grade FastAPI 4-tier boilerplate"
requires-python = ">=3.10,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.5.0",
  "bcrypt>=4.1.0",
  "python-socketio>=5.3.0",
  "redis>=5.0.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
